# wings-accel

./: .gitignore  Makefile  README.md  conftest.py  install.py  requirements-dev.txt  supported_features.json
LMCache_patch/: .gitignore  AGENTS.md  DEVELOPMENT_DESIGN.md  README.md  STATUS.md  install.py
arctic-inference/: build.sh
docs/: 1.txt  3990742 安全编码规范_20260317.xlsx  3990742 通用编码规范_20260317 (3).xlsx  README.md  adaptive_draft_test_report.md  ears_benchmark_report-nv.md  ears_benchmark_report.md  ears_benchmark_report_v0_18_0rc1.md  (+6 more)
sparsekv/: build.sh  pyproject.toml  setup.py  shared_index.py  utils.py
sparsekv/bmsa/: __init__.py  sche_agent.py  types.py  utils.py  worker_agent.py
sparsekv/bmsa/paged_kmeans/: __init__.py  centroid_pool.py  cluster_index.py  clusterer.py  config.py  triton_kernels.py  utils.py
sparsekv/bmsa/prefetch/: prefetch_engine.py
sparsekv/bmsa/tests/: conftest.py
sparsekv/bmsa/tests/connectors/: test_localstore_eviction.py  test_tp_lookup.py
sparsekv/bmsa/tests/integration/: batch_run.py
sparsekv/bmsa/tests/paged_kmeans/: paged_wrapper.py  reference_kmeans.py  test_config.py  test_kmeans_functional.py  test_kmeans_perf.py  test_kmeans_quality.py  utils.py
sparsekv/bmsa/tests/paged_manager/: helpers.py  test_attention_kv_order_invariance.py  test_centroid_pool_allocator.py  test_centroid_pool_topk_gqa.py  test_cutlass_topk.py  test_topk_perf.py
sparsekv/connector/: __init__.py  sparse_connector.py
sparsekv/connectors/: __init__.py  localstore_connector.py  sparse_connector.py
sparsekv/core/: __init__.py  agent.py  base.py  factory.py  hooks.py
sparsekv/kvstore/: __init__.py  factory.py  kvstore.py
sparsekv/native/: CMakeLists.txt  __init__.py
sparsekv/native/kvstore/: CMakeLists.txt
sparsekv/native/kvstore/core/: kvstore.h
sparsekv/native/kvstore/core/device/: CMakeLists.txt  ibuffered_device.h  idevice.h
sparsekv/native/kvstore/core/device/ascend/: ascend_device.cc
sparsekv/native/kvstore/core/device/cuda/: CMakeLists.txt  cuda_device.cu
sparsekv/native/kvstore/core/task/: task_manager.h  task_queue.h  task_set.h  task_shard.h  task_waiter.h
sparsekv/native/kvstore/local_kvstore/: CMakeLists.txt  bindings.cpp
sparsekv/native/kvstore/local_kvstore/include/: localstore.h
sparsekv/native/kvstore/local_kvstore/src/: localstore.cc
sparsekv/native/kvstore/shared/: CMakeLists.txt
sparsekv/native/kvstore/shared/file/: file.cc  file.h  ifile.h  posix_file.cc  posix_file.h
sparsekv/native/kvstore/shared/infra/: CMakeLists.txt
sparsekv/native/kvstore/shared/infra/logger/: logger.h
sparsekv/native/kvstore/shared/infra/logger/flux/: flux_logger.cc
sparsekv/native/kvstore/shared/infra/logger/spdlog/: spdlog_logger.cc
sparsekv/native/kvstore/shared/infra/status/: status.h
sparsekv/native/kvstore/shared/infra/template/: hashset.h  singleton.h  spsc_ring_queue.h  timer.h  topn_heap.h
sparsekv/native/kvstore/shared/infra/thread/: index_pool.h  latch.h  thread_pool.h
sparsekv/native/kvstore/shared/infra/time/: now_time.h  stopwatch.h
sparsekv/native/kvstore/shared/template/: store_binder.h  task_wrapper.h
sparsekv/native/kvstore/shared/type/: types.h
sparsekv/native/offload_ops/: CMakeLists.txt  bindings.cpp
sparsekv/native/offload_ops/src/: cal_kpre_and_topk.cpp  k_repre.cpp  select_topk_block.cpp  thread_safe_queue.cpp  vec_product.cpp
sparsekv/native/paged_kmeans/: CMakeLists.txt  bindings.cpp
sparsekv/native/paged_kmeans/src/: batch_gemm_softmax.cu
sparsekv/native/prefetch_engine/: CMakeLists.txt  bindings.cpp
sparsekv/native/prefetch_engine/include/: kvcache_log.h  kvcache_pre.h
sparsekv/native/prefetch_engine/src/: kvcache_pre.cpp
sparsekv/store/: __init__.py
sparsekv/store/localstore/: __init__.py  localstore_connector.py
wings_engine_patch/: .gitignore  README.md  TODO  build.sh  build_wheel.py  fusion_result.json  pyproject.toml  setup.py
wings_engine_patch/tests/: dummy_patch.py  test_adaptive_draft_model_patch.py  test_ascend_registry_contract.py  test_build_wheel.py  test_draft_model_patch.py  test_ears_ascend_compat.py  test_ears_ascend_runtime_hooks.py  test_ears_nvidia_runtime_hooks.py  test_ears_patch.py  test_ears_v019_runtime_hooks.py  test_install_logic.py  test_install_runtime_contract.py  test_integration_real.py  test_parallel_spec_decode_patch.py  test_public_surface.py  test_sparse_kv_patch.py  test_wings_patch.py
wings_engine_patch/wings_engine_patch/: __init__.py  _auto_patch.py  registry.py  registry_v1.py  supported_features.json
wings_engine_patch/wings_engine_patch/patch_common/: __init__.py  ears_core.py
wings_engine_patch/wings_engine_patch/patch_vllm_ascend_container/: __init__.py
wings_engine_patch/wings_engine_patch/patch_vllm_ascend_container/v0_12_0rc1/vllm_ascend/ops/: __init__.py  fp4_ops.py  fp8_ops.py
wings_engine_patch/wings_engine_patch/patch_vllm_ascend_container/v0_12_0rc1/vllm_ascend/ops/fused_moe/: patch_moe_comm_method.py  patch_moe_mlp.py
wings_engine_patch/wings_engine_patch/patch_vllm_ascend_container/v0_12_0rc1/vllm_ascend/quantization/: patch_quant_config.py  patch_utils.py  w4a16nvfp4.py  w8a16fp8.py
wings_engine_patch/wings_engine_patch/patch_vllm_ascend_container/v0_17_0/: __init__.py  parallel_spec_decode_patch.py
wings_engine_patch/wings_engine_patch/patch_vllm_ascend_container/v0_17_0rc1/: __init__.py  ears_ascend_compat.py  ears_patch.py
wings_engine_patch/wings_engine_patch/patch_vllm_ascend_container/v0_18_0rc1/: __init__.py  draft_model_patch.py  ears_ascend_compat.py  ears_ascend_runtime_hooks.py  ears_patch.py
wings_engine_patch/wings_engine_patch/patch_vllm_container/v0_12_0_empty/: hello_world_patch.py  test_patch.py
wings_engine_patch/wings_engine_patch/patch_vllm_container/v0_17_0/: __init__.py  adaptive_draft_model_patch.py  draft_model_patch.py  ears_ascend_compat.py  ears_ascend_runtime_hooks.py  ears_patch.py  sparse_kv_config.py  sparse_kv_patch.py
wings_engine_patch/wings_engine_patch/patch_vllm_container/v0_19_0/: __init__.py  ears_nvidia_runtime_hooks.py  ears_patch.py
(+81 files in other folders)
